// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
ReactTestInstance {
  "_fiber": FiberNode {
    "_debugHookTypes": null,
    "_debugID": 4,
    "_debugIsCurrentlyTiming": false,
    "_debugNeedsRemount": false,
    "_debugOwner": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 3,
      "_debugIsCurrentlyTiming": false,
      "_debugNeedsRemount": false,
      "_debugOwner": null,
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": [Circular],
      "childExpirationTime": 0,
      "dependencies": null,
      "effectTag": 1,
      "elementType": [Function],
      "expirationTime": 0,
      "firstEffect": null,
      "index": 0,
      "key": null,
      "lastEffect": null,
      "memoizedProps": Object {
        "isPrimary": true,
        "text": "Header",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "isPrimary": true,
        "text": "Header",
      },
      "ref": null,
      "return": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 1,
        "_debugIsCurrentlyTiming": false,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 1,
          "_debugIsCurrentlyTiming": false,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": [Circular],
          "child": null,
          "childExpirationTime": 0,
          "dependencies": null,
          "effectTag": 0,
          "elementType": null,
          "expirationTime": 1073741823,
          "firstEffect": null,
          "index": 0,
          "key": null,
          "lastEffect": null,
          "memoizedProps": null,
          "memoizedState": null,
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "callbackExpirationTime": 0,
            "callbackNode": null,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Header",
                    },
                  ],
                  "isHidden": false,
                  "props": Object {
                    "children": "Header",
                    "style": Array [
                      Object {
                        "color": "#17475B",
                        "fontFamily": "Nunito-Black",
                        "fontSize": 30,
                        "letterSpacing": 0,
                        "lineHeight": 35,
                        "opacity": 1,
                        "paddingHorizontal": 14,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#F3997B",
                      },
                    ],
                    "testID": "Header",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "finishedExpirationTime": 0,
            "finishedWork": null,
            "firstBatch": null,
            "firstPendingTime": 0,
            "hydrate": false,
            "interactionThreadID": 1,
            "lastPendingTime": 0,
            "memoizedInteractions": Set {},
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pingCache": null,
            "pingTime": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": null,
            "firstCapturedEffect": null,
            "firstCapturedUpdate": null,
            "firstEffect": null,
            "firstUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={true}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
            "lastCapturedEffect": null,
            "lastCapturedUpdate": null,
            "lastEffect": null,
            "lastUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={true}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
          },
        },
        "child": [Circular],
        "childExpirationTime": 0,
        "dependencies": null,
        "effectTag": 0,
        "elementType": null,
        "expirationTime": 0,
        "firstEffect": [Circular],
        "index": 0,
        "key": null,
        "lastEffect": [Circular],
        "memoizedProps": null,
        "memoizedState": Object {
          "element": <Header
            isPrimary={true}
            text="Header"
          />,
        },
        "mode": 0,
        "nextEffect": null,
        "pendingProps": null,
        "ref": null,
        "return": null,
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": FiberRootNode {
          "callbackExpirationTime": 0,
          "callbackNode": null,
          "containerInfo": Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "isHidden": false,
                    "tag": "TEXT",
                    "text": "Header",
                  },
                ],
                "isHidden": false,
                "props": Object {
                  "children": "Header",
                  "style": Array [
                    Object {
                      "color": "#17475B",
                      "fontFamily": "Nunito-Black",
                      "fontSize": 30,
                      "letterSpacing": 0,
                      "lineHeight": 35,
                      "opacity": 1,
                      "paddingHorizontal": 14,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#F3997B",
                    },
                  ],
                  "testID": "Header",
                },
                "rootContainerInstance": [Circular],
                "tag": "INSTANCE",
                "type": "Text",
              },
            ],
            "createNodeMock": [Function],
            "tag": "CONTAINER",
          },
          "context": Object {},
          "current": [Circular],
          "finishedExpirationTime": 0,
          "finishedWork": null,
          "firstBatch": null,
          "firstPendingTime": 0,
          "hydrate": false,
          "interactionThreadID": 1,
          "lastPendingTime": 0,
          "memoizedInteractions": Set {},
          "pendingChildren": null,
          "pendingContext": null,
          "pendingInteractionMap": Map {},
          "pingCache": null,
          "pingTime": 0,
          "tag": 0,
          "timeoutHandle": -1,
        },
        "tag": 3,
        "treeBaseDuration": 0,
        "type": null,
        "updateQueue": Object {
          "baseState": Object {
            "element": <Header
              isPrimary={true}
              text="Header"
            />,
          },
          "firstCapturedEffect": null,
          "firstCapturedUpdate": null,
          "firstEffect": null,
          "firstUpdate": null,
          "lastCapturedEffect": null,
          "lastCapturedUpdate": null,
          "lastEffect": null,
          "lastUpdate": null,
        },
      },
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": null,
      "tag": 0,
      "treeBaseDuration": 0,
      "type": [Function],
      "updateQueue": null,
    },
    "_debugSource": null,
    "actualDuration": 0,
    "actualStartTime": -1,
    "alternate": null,
    "child": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 5,
      "_debugIsCurrentlyTiming": false,
      "_debugNeedsRemount": false,
      "_debugOwner": [Circular],
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 6,
        "_debugIsCurrentlyTiming": false,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": null,
        "child": null,
        "childExpirationTime": 0,
        "dependencies": null,
        "effectTag": 0,
        "elementType": null,
        "expirationTime": 0,
        "firstEffect": null,
        "index": 0,
        "key": null,
        "lastEffect": null,
        "memoizedProps": "Header",
        "memoizedState": null,
        "mode": 0,
        "nextEffect": null,
        "pendingProps": "Header",
        "ref": null,
        "return": [Circular],
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": Object {
          "isHidden": false,
          "tag": "TEXT",
          "text": "Header",
        },
        "tag": 6,
        "treeBaseDuration": 0,
        "type": null,
        "updateQueue": null,
      },
      "childExpirationTime": 0,
      "dependencies": null,
      "effectTag": 0,
      "elementType": "Text",
      "expirationTime": 0,
      "firstEffect": null,
      "index": 0,
      "key": null,
      "lastEffect": null,
      "memoizedProps": Object {
        "children": "Header",
        "style": Array [
          Object {
            "color": "#17475B",
            "fontFamily": "Nunito-Black",
            "fontSize": 30,
            "letterSpacing": 0,
            "lineHeight": 35,
            "opacity": 1,
            "paddingHorizontal": 14,
            "textAlign": "center",
          },
          Object {
            "color": "#F3997B",
          },
        ],
        "testID": "Header",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "children": "Header",
        "style": Array [
          Object {
            "color": "#17475B",
            "fontFamily": "Nunito-Black",
            "fontSize": 30,
            "letterSpacing": 0,
            "lineHeight": 35,
            "opacity": 1,
            "paddingHorizontal": 14,
            "textAlign": "center",
          },
          Object {
            "color": "#F3997B",
          },
        ],
        "testID": "Header",
      },
      "ref": null,
      "return": [Circular],
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": Object {
        "children": Array [
          Object {
            "isHidden": false,
            "tag": "TEXT",
            "text": "Header",
          },
        ],
        "isHidden": false,
        "props": Object {
          "children": "Header",
          "style": Array [
            Object {
              "color": "#17475B",
              "fontFamily": "Nunito-Black",
              "fontSize": 30,
              "letterSpacing": 0,
              "lineHeight": 35,
              "opacity": 1,
              "paddingHorizontal": 14,
              "textAlign": "center",
            },
            Object {
              "color": "#F3997B",
            },
          ],
          "testID": "Header",
        },
        "rootContainerInstance": Object {
          "children": Array [
            [Circular],
          ],
          "createNodeMock": [Function],
          "tag": "CONTAINER",
        },
        "tag": "INSTANCE",
        "type": "Text",
      },
      "tag": 5,
      "treeBaseDuration": 0,
      "type": "Text",
      "updateQueue": null,
    },
    "childExpirationTime": 0,
    "dependencies": null,
    "effectTag": 1,
    "elementType": [Function],
    "expirationTime": 0,
    "firstEffect": null,
    "index": 0,
    "key": null,
    "lastEffect": null,
    "memoizedProps": Object {
      "children": "Header",
      "style": Array [
        Object {
          "color": "#17475B",
          "fontFamily": "Nunito-Black",
          "fontSize": 30,
          "letterSpacing": 0,
          "lineHeight": 35,
          "opacity": 1,
          "paddingHorizontal": 14,
          "textAlign": "center",
        },
        Object {
          "color": "#F3997B",
        },
      ],
      "testID": "Header",
    },
    "memoizedState": null,
    "mode": 0,
    "nextEffect": null,
    "pendingProps": Object {
      "children": "Header",
      "style": Array [
        Object {
          "color": "#17475B",
          "fontFamily": "Nunito-Black",
          "fontSize": 30,
          "letterSpacing": 0,
          "lineHeight": 35,
          "opacity": 1,
          "paddingHorizontal": 14,
          "textAlign": "center",
        },
        Object {
          "color": "#F3997B",
        },
      ],
      "testID": "Header",
    },
    "ref": null,
    "return": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 3,
      "_debugIsCurrentlyTiming": false,
      "_debugNeedsRemount": false,
      "_debugOwner": null,
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": [Circular],
      "childExpirationTime": 0,
      "dependencies": null,
      "effectTag": 1,
      "elementType": [Function],
      "expirationTime": 0,
      "firstEffect": null,
      "index": 0,
      "key": null,
      "lastEffect": null,
      "memoizedProps": Object {
        "isPrimary": true,
        "text": "Header",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "isPrimary": true,
        "text": "Header",
      },
      "ref": null,
      "return": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 1,
        "_debugIsCurrentlyTiming": false,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 1,
          "_debugIsCurrentlyTiming": false,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": [Circular],
          "child": null,
          "childExpirationTime": 0,
          "dependencies": null,
          "effectTag": 0,
          "elementType": null,
          "expirationTime": 1073741823,
          "firstEffect": null,
          "index": 0,
          "key": null,
          "lastEffect": null,
          "memoizedProps": null,
          "memoizedState": null,
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "callbackExpirationTime": 0,
            "callbackNode": null,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Header",
                    },
                  ],
                  "isHidden": false,
                  "props": Object {
                    "children": "Header",
                    "style": Array [
                      Object {
                        "color": "#17475B",
                        "fontFamily": "Nunito-Black",
                        "fontSize": 30,
                        "letterSpacing": 0,
                        "lineHeight": 35,
                        "opacity": 1,
                        "paddingHorizontal": 14,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#F3997B",
                      },
                    ],
                    "testID": "Header",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "finishedExpirationTime": 0,
            "finishedWork": null,
            "firstBatch": null,
            "firstPendingTime": 0,
            "hydrate": false,
            "interactionThreadID": 1,
            "lastPendingTime": 0,
            "memoizedInteractions": Set {},
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pingCache": null,
            "pingTime": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": null,
            "firstCapturedEffect": null,
            "firstCapturedUpdate": null,
            "firstEffect": null,
            "firstUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={true}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
            "lastCapturedEffect": null,
            "lastCapturedUpdate": null,
            "lastEffect": null,
            "lastUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={true}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
          },
        },
        "child": [Circular],
        "childExpirationTime": 0,
        "dependencies": null,
        "effectTag": 0,
        "elementType": null,
        "expirationTime": 0,
        "firstEffect": [Circular],
        "index": 0,
        "key": null,
        "lastEffect": [Circular],
        "memoizedProps": null,
        "memoizedState": Object {
          "element": <Header
            isPrimary={true}
            text="Header"
          />,
        },
        "mode": 0,
        "nextEffect": null,
        "pendingProps": null,
        "ref": null,
        "return": null,
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": FiberRootNode {
          "callbackExpirationTime": 0,
          "callbackNode": null,
          "containerInfo": Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "isHidden": false,
                    "tag": "TEXT",
                    "text": "Header",
                  },
                ],
                "isHidden": false,
                "props": Object {
                  "children": "Header",
                  "style": Array [
                    Object {
                      "color": "#17475B",
                      "fontFamily": "Nunito-Black",
                      "fontSize": 30,
                      "letterSpacing": 0,
                      "lineHeight": 35,
                      "opacity": 1,
                      "paddingHorizontal": 14,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#F3997B",
                    },
                  ],
                  "testID": "Header",
                },
                "rootContainerInstance": [Circular],
                "tag": "INSTANCE",
                "type": "Text",
              },
            ],
            "createNodeMock": [Function],
            "tag": "CONTAINER",
          },
          "context": Object {},
          "current": [Circular],
          "finishedExpirationTime": 0,
          "finishedWork": null,
          "firstBatch": null,
          "firstPendingTime": 0,
          "hydrate": false,
          "interactionThreadID": 1,
          "lastPendingTime": 0,
          "memoizedInteractions": Set {},
          "pendingChildren": null,
          "pendingContext": null,
          "pendingInteractionMap": Map {},
          "pingCache": null,
          "pingTime": 0,
          "tag": 0,
          "timeoutHandle": -1,
        },
        "tag": 3,
        "treeBaseDuration": 0,
        "type": null,
        "updateQueue": Object {
          "baseState": Object {
            "element": <Header
              isPrimary={true}
              text="Header"
            />,
          },
          "firstCapturedEffect": null,
          "firstCapturedUpdate": null,
          "firstEffect": null,
          "firstUpdate": null,
          "lastCapturedEffect": null,
          "lastCapturedUpdate": null,
          "lastEffect": null,
          "lastUpdate": null,
        },
      },
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": null,
      "tag": 0,
      "treeBaseDuration": 0,
      "type": [Function],
      "updateQueue": null,
    },
    "selfBaseDuration": 0,
    "sibling": null,
    "stateNode": Component {
      "_reactInternalFiber": [Circular],
      "_reactInternalInstance": Object {},
      "context": Object {},
      "props": Object {
        "children": "Header",
        "style": Array [
          Object {
            "color": "#17475B",
            "fontFamily": "Nunito-Black",
            "fontSize": 30,
            "letterSpacing": 0,
            "lineHeight": 35,
            "opacity": 1,
            "paddingHorizontal": 14,
            "textAlign": "center",
          },
          Object {
            "color": "#F3997B",
          },
        ],
        "testID": "Header",
      },
      "refs": Object {},
      "state": null,
      "updater": Object {
        "enqueueForceUpdate": [Function],
        "enqueueReplaceState": [Function],
        "enqueueSetState": [Function],
        "isMounted": [Function],
      },
    },
    "tag": 1,
    "treeBaseDuration": 0,
    "type": [Function],
    "updateQueue": null,
  },
}
`;

exports[` 2`] = `
ReactTestInstance {
  "_fiber": FiberNode {
    "_debugHookTypes": null,
    "_debugID": 10,
    "_debugIsCurrentlyTiming": false,
    "_debugNeedsRemount": false,
    "_debugOwner": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 9,
      "_debugIsCurrentlyTiming": false,
      "_debugNeedsRemount": false,
      "_debugOwner": null,
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": [Circular],
      "childExpirationTime": 0,
      "dependencies": null,
      "effectTag": 1,
      "elementType": [Function],
      "expirationTime": 0,
      "firstEffect": null,
      "index": 0,
      "key": null,
      "lastEffect": null,
      "memoizedProps": Object {
        "isPrimary": false,
        "text": "Header",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "isPrimary": false,
        "text": "Header",
      },
      "ref": null,
      "return": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 7,
        "_debugIsCurrentlyTiming": false,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 7,
          "_debugIsCurrentlyTiming": false,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": [Circular],
          "child": null,
          "childExpirationTime": 0,
          "dependencies": null,
          "effectTag": 0,
          "elementType": null,
          "expirationTime": 1073741823,
          "firstEffect": null,
          "index": 0,
          "key": null,
          "lastEffect": null,
          "memoizedProps": null,
          "memoizedState": null,
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "callbackExpirationTime": 0,
            "callbackNode": null,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Header",
                    },
                  ],
                  "isHidden": false,
                  "props": Object {
                    "children": "Header",
                    "style": Array [
                      Object {
                        "color": "#17475B",
                        "fontFamily": "Nunito-Black",
                        "fontSize": 30,
                        "letterSpacing": 0,
                        "lineHeight": 35,
                        "opacity": 1,
                        "paddingHorizontal": 14,
                        "textAlign": "center",
                      },
                      false,
                    ],
                    "testID": "Header",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "finishedExpirationTime": 0,
            "finishedWork": null,
            "firstBatch": null,
            "firstPendingTime": 0,
            "hydrate": false,
            "interactionThreadID": 2,
            "lastPendingTime": 0,
            "memoizedInteractions": Set {},
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pingCache": null,
            "pingTime": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": null,
            "firstCapturedEffect": null,
            "firstCapturedUpdate": null,
            "firstEffect": null,
            "firstUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={false}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
            "lastCapturedEffect": null,
            "lastCapturedUpdate": null,
            "lastEffect": null,
            "lastUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={false}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
          },
        },
        "child": [Circular],
        "childExpirationTime": 0,
        "dependencies": null,
        "effectTag": 0,
        "elementType": null,
        "expirationTime": 0,
        "firstEffect": [Circular],
        "index": 0,
        "key": null,
        "lastEffect": [Circular],
        "memoizedProps": null,
        "memoizedState": Object {
          "element": <Header
            isPrimary={false}
            text="Header"
          />,
        },
        "mode": 0,
        "nextEffect": null,
        "pendingProps": null,
        "ref": null,
        "return": null,
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": FiberRootNode {
          "callbackExpirationTime": 0,
          "callbackNode": null,
          "containerInfo": Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "isHidden": false,
                    "tag": "TEXT",
                    "text": "Header",
                  },
                ],
                "isHidden": false,
                "props": Object {
                  "children": "Header",
                  "style": Array [
                    Object {
                      "color": "#17475B",
                      "fontFamily": "Nunito-Black",
                      "fontSize": 30,
                      "letterSpacing": 0,
                      "lineHeight": 35,
                      "opacity": 1,
                      "paddingHorizontal": 14,
                      "textAlign": "center",
                    },
                    false,
                  ],
                  "testID": "Header",
                },
                "rootContainerInstance": [Circular],
                "tag": "INSTANCE",
                "type": "Text",
              },
            ],
            "createNodeMock": [Function],
            "tag": "CONTAINER",
          },
          "context": Object {},
          "current": [Circular],
          "finishedExpirationTime": 0,
          "finishedWork": null,
          "firstBatch": null,
          "firstPendingTime": 0,
          "hydrate": false,
          "interactionThreadID": 2,
          "lastPendingTime": 0,
          "memoizedInteractions": Set {},
          "pendingChildren": null,
          "pendingContext": null,
          "pendingInteractionMap": Map {},
          "pingCache": null,
          "pingTime": 0,
          "tag": 0,
          "timeoutHandle": -1,
        },
        "tag": 3,
        "treeBaseDuration": 0,
        "type": null,
        "updateQueue": Object {
          "baseState": Object {
            "element": <Header
              isPrimary={false}
              text="Header"
            />,
          },
          "firstCapturedEffect": null,
          "firstCapturedUpdate": null,
          "firstEffect": null,
          "firstUpdate": null,
          "lastCapturedEffect": null,
          "lastCapturedUpdate": null,
          "lastEffect": null,
          "lastUpdate": null,
        },
      },
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": null,
      "tag": 0,
      "treeBaseDuration": 0,
      "type": [Function],
      "updateQueue": null,
    },
    "_debugSource": null,
    "actualDuration": 0,
    "actualStartTime": -1,
    "alternate": null,
    "child": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 11,
      "_debugIsCurrentlyTiming": false,
      "_debugNeedsRemount": false,
      "_debugOwner": [Circular],
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 12,
        "_debugIsCurrentlyTiming": false,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": null,
        "child": null,
        "childExpirationTime": 0,
        "dependencies": null,
        "effectTag": 0,
        "elementType": null,
        "expirationTime": 0,
        "firstEffect": null,
        "index": 0,
        "key": null,
        "lastEffect": null,
        "memoizedProps": "Header",
        "memoizedState": null,
        "mode": 0,
        "nextEffect": null,
        "pendingProps": "Header",
        "ref": null,
        "return": [Circular],
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": Object {
          "isHidden": false,
          "tag": "TEXT",
          "text": "Header",
        },
        "tag": 6,
        "treeBaseDuration": 0,
        "type": null,
        "updateQueue": null,
      },
      "childExpirationTime": 0,
      "dependencies": null,
      "effectTag": 0,
      "elementType": "Text",
      "expirationTime": 0,
      "firstEffect": null,
      "index": 0,
      "key": null,
      "lastEffect": null,
      "memoizedProps": Object {
        "children": "Header",
        "style": Array [
          Object {
            "color": "#17475B",
            "fontFamily": "Nunito-Black",
            "fontSize": 30,
            "letterSpacing": 0,
            "lineHeight": 35,
            "opacity": 1,
            "paddingHorizontal": 14,
            "textAlign": "center",
          },
          false,
        ],
        "testID": "Header",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "children": "Header",
        "style": Array [
          Object {
            "color": "#17475B",
            "fontFamily": "Nunito-Black",
            "fontSize": 30,
            "letterSpacing": 0,
            "lineHeight": 35,
            "opacity": 1,
            "paddingHorizontal": 14,
            "textAlign": "center",
          },
          false,
        ],
        "testID": "Header",
      },
      "ref": null,
      "return": [Circular],
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": Object {
        "children": Array [
          Object {
            "isHidden": false,
            "tag": "TEXT",
            "text": "Header",
          },
        ],
        "isHidden": false,
        "props": Object {
          "children": "Header",
          "style": Array [
            Object {
              "color": "#17475B",
              "fontFamily": "Nunito-Black",
              "fontSize": 30,
              "letterSpacing": 0,
              "lineHeight": 35,
              "opacity": 1,
              "paddingHorizontal": 14,
              "textAlign": "center",
            },
            false,
          ],
          "testID": "Header",
        },
        "rootContainerInstance": Object {
          "children": Array [
            [Circular],
          ],
          "createNodeMock": [Function],
          "tag": "CONTAINER",
        },
        "tag": "INSTANCE",
        "type": "Text",
      },
      "tag": 5,
      "treeBaseDuration": 0,
      "type": "Text",
      "updateQueue": null,
    },
    "childExpirationTime": 0,
    "dependencies": null,
    "effectTag": 1,
    "elementType": [Function],
    "expirationTime": 0,
    "firstEffect": null,
    "index": 0,
    "key": null,
    "lastEffect": null,
    "memoizedProps": Object {
      "children": "Header",
      "style": Array [
        Object {
          "color": "#17475B",
          "fontFamily": "Nunito-Black",
          "fontSize": 30,
          "letterSpacing": 0,
          "lineHeight": 35,
          "opacity": 1,
          "paddingHorizontal": 14,
          "textAlign": "center",
        },
        false,
      ],
      "testID": "Header",
    },
    "memoizedState": null,
    "mode": 0,
    "nextEffect": null,
    "pendingProps": Object {
      "children": "Header",
      "style": Array [
        Object {
          "color": "#17475B",
          "fontFamily": "Nunito-Black",
          "fontSize": 30,
          "letterSpacing": 0,
          "lineHeight": 35,
          "opacity": 1,
          "paddingHorizontal": 14,
          "textAlign": "center",
        },
        false,
      ],
      "testID": "Header",
    },
    "ref": null,
    "return": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 9,
      "_debugIsCurrentlyTiming": false,
      "_debugNeedsRemount": false,
      "_debugOwner": null,
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": [Circular],
      "childExpirationTime": 0,
      "dependencies": null,
      "effectTag": 1,
      "elementType": [Function],
      "expirationTime": 0,
      "firstEffect": null,
      "index": 0,
      "key": null,
      "lastEffect": null,
      "memoizedProps": Object {
        "isPrimary": false,
        "text": "Header",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "isPrimary": false,
        "text": "Header",
      },
      "ref": null,
      "return": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 7,
        "_debugIsCurrentlyTiming": false,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 7,
          "_debugIsCurrentlyTiming": false,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": [Circular],
          "child": null,
          "childExpirationTime": 0,
          "dependencies": null,
          "effectTag": 0,
          "elementType": null,
          "expirationTime": 1073741823,
          "firstEffect": null,
          "index": 0,
          "key": null,
          "lastEffect": null,
          "memoizedProps": null,
          "memoizedState": null,
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "callbackExpirationTime": 0,
            "callbackNode": null,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Header",
                    },
                  ],
                  "isHidden": false,
                  "props": Object {
                    "children": "Header",
                    "style": Array [
                      Object {
                        "color": "#17475B",
                        "fontFamily": "Nunito-Black",
                        "fontSize": 30,
                        "letterSpacing": 0,
                        "lineHeight": 35,
                        "opacity": 1,
                        "paddingHorizontal": 14,
                        "textAlign": "center",
                      },
                      false,
                    ],
                    "testID": "Header",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "finishedExpirationTime": 0,
            "finishedWork": null,
            "firstBatch": null,
            "firstPendingTime": 0,
            "hydrate": false,
            "interactionThreadID": 2,
            "lastPendingTime": 0,
            "memoizedInteractions": Set {},
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pingCache": null,
            "pingTime": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": null,
            "firstCapturedEffect": null,
            "firstCapturedUpdate": null,
            "firstEffect": null,
            "firstUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={false}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
            "lastCapturedEffect": null,
            "lastCapturedUpdate": null,
            "lastEffect": null,
            "lastUpdate": Object {
              "callback": null,
              "expirationTime": 1073741823,
              "next": null,
              "nextEffect": null,
              "payload": Object {
                "element": <Header
                  isPrimary={false}
                  text="Header"
                />,
              },
              "priority": 97,
              "suspenseConfig": null,
              "tag": 0,
            },
          },
        },
        "child": [Circular],
        "childExpirationTime": 0,
        "dependencies": null,
        "effectTag": 0,
        "elementType": null,
        "expirationTime": 0,
        "firstEffect": [Circular],
        "index": 0,
        "key": null,
        "lastEffect": [Circular],
        "memoizedProps": null,
        "memoizedState": Object {
          "element": <Header
            isPrimary={false}
            text="Header"
          />,
        },
        "mode": 0,
        "nextEffect": null,
        "pendingProps": null,
        "ref": null,
        "return": null,
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": FiberRootNode {
          "callbackExpirationTime": 0,
          "callbackNode": null,
          "containerInfo": Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "isHidden": false,
                    "tag": "TEXT",
                    "text": "Header",
                  },
                ],
                "isHidden": false,
                "props": Object {
                  "children": "Header",
                  "style": Array [
                    Object {
                      "color": "#17475B",
                      "fontFamily": "Nunito-Black",
                      "fontSize": 30,
                      "letterSpacing": 0,
                      "lineHeight": 35,
                      "opacity": 1,
                      "paddingHorizontal": 14,
                      "textAlign": "center",
                    },
                    false,
                  ],
                  "testID": "Header",
                },
                "rootContainerInstance": [Circular],
                "tag": "INSTANCE",
                "type": "Text",
              },
            ],
            "createNodeMock": [Function],
            "tag": "CONTAINER",
          },
          "context": Object {},
          "current": [Circular],
          "finishedExpirationTime": 0,
          "finishedWork": null,
          "firstBatch": null,
          "firstPendingTime": 0,
          "hydrate": false,
          "interactionThreadID": 2,
          "lastPendingTime": 0,
          "memoizedInteractions": Set {},
          "pendingChildren": null,
          "pendingContext": null,
          "pendingInteractionMap": Map {},
          "pingCache": null,
          "pingTime": 0,
          "tag": 0,
          "timeoutHandle": -1,
        },
        "tag": 3,
        "treeBaseDuration": 0,
        "type": null,
        "updateQueue": Object {
          "baseState": Object {
            "element": <Header
              isPrimary={false}
              text="Header"
            />,
          },
          "firstCapturedEffect": null,
          "firstCapturedUpdate": null,
          "firstEffect": null,
          "firstUpdate": null,
          "lastCapturedEffect": null,
          "lastCapturedUpdate": null,
          "lastEffect": null,
          "lastUpdate": null,
        },
      },
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": null,
      "tag": 0,
      "treeBaseDuration": 0,
      "type": [Function],
      "updateQueue": null,
    },
    "selfBaseDuration": 0,
    "sibling": null,
    "stateNode": Component {
      "_reactInternalFiber": [Circular],
      "_reactInternalInstance": Object {},
      "context": Object {},
      "props": Object {
        "children": "Header",
        "style": Array [
          Object {
            "color": "#17475B",
            "fontFamily": "Nunito-Black",
            "fontSize": 30,
            "letterSpacing": 0,
            "lineHeight": 35,
            "opacity": 1,
            "paddingHorizontal": 14,
            "textAlign": "center",
          },
          false,
        ],
        "testID": "Header",
      },
      "refs": Object {},
      "state": null,
      "updater": Object {
        "enqueueForceUpdate": [Function],
        "enqueueReplaceState": [Function],
        "enqueueSetState": [Function],
        "isMounted": [Function],
      },
    },
    "tag": 1,
    "treeBaseDuration": 0,
    "type": [Function],
    "updateQueue": null,
  },
}
`;
